# totmod

./: README.md  descriptor.mod
events/: ToT_Goyda_events.txt  ToT_Great_Cold_events.txt  ToT_Hirasawa_events.txt  ToT_Kolguyev_events.txt  ToT_Rhodes_Island_events.txt  ToT_Rostislav_events.txt  ToT_Umineko_events.txt
interface/: ToT_Chernobyl_GUIs.gfx  ToT_Chernobyl_GUIs.gui  ToT_Kyiv_GUIs.gfx  ToT_Kyiv_GUIs.gui  command_character_view.gui  core.gfx  countrydecisionview.gui  countrydiplomacyview.gui  countrypoliticsview.gfx  countrypoliticsview.gui  eventwindow.gui  far_east_ideas.gfx  focusgfxshine.py  fonts_tot.gfx  goals2.gfx  goals2_shine.gfx  ideologies.gfx  kgy_event_pics.gfx  moscow_ideas.gfx  nationalfocusview.gui  pie.gfx  pie.gui  politics_overview.gfx  south_russia_ideas.gfx  subid_stuff.gui  tot_event_pics.gfx  tot_ideas.gfx  tot_ministers.gfx  ukraine_ideas.gfx
map/: Ukraine.psd  adjacency_rules.txt  airports.txt  buildings.txt  definition.csv  railways.txt  rocketsites.txt  weatherpositions.txt
useful_python_programs/: Convert_Focuses_to_Relative_PositionGUI.py  CustomModifierTooltipGenerator.py  DrawIoConverter.py  Duplicate_Loc_Fix_v2.py  EventMakerGUI.py  EventPicFiller.py  Event_Loc_GeneratorGUI.py  FOR_TESTING_data_all.csv  (+39 more)
useful_python_programs/tree-sitter-HoI4/: Cargo.toml  binding.gyp  grammar.js  package.json
useful_python_programs/tree-sitter-HoI4/bindings/node/: binding.cc  index.js
useful_python_programs/tree-sitter-HoI4/bindings/rust/: lib.rs
useful_python_programs/tree-sitter-HoI4/src/: grammar.json  node-types.json  parser.c
(+1188 files in other folders)
